<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="governorate">Governorate</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="sky">Sky Status</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultraviolet">Ultraviolet</string>
    <string name="visibility">Visibility</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="title_activity_my_map">MyMapActivity</string>
    <string name="Location">Location</string>
    <string name="Language">Language</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="Notification">Notification</string>
    <string name="GPS">GPS</string>
    <string name="Map">Map</string>
    <string name="english">English</string>
    <string name="Arabic">Arabic</string>
    <string name="Celsius">Celsius</string>
    <string name="Kelvin">Kelvin</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="MeterForSec">Meter/Sec</string>
    <string name="MillForHour">Mill/Hour</string>
    <string name="Enable">Enable</string>
    <string name="Disable">Disable</string>
    <string name="Choose">Choose</string>
    <string name="ok">Ok</string>
    <string name="DayName">DayName</string>
    <string name="Status">Status</string>
    <string name="CountryName">Country Name</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="save">Save</string>

</resources>