<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment"
    android:background="@color/purple_700"
   >


    <TextView
        android:textColor="@color/white"
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/Location"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:text="@string/Language"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:cardCornerRadius="20dp"
       >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"  >
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgLocation">

            <RadioButton
                android:id="@+id/radioGPSLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GPS"
                android:textColor="@color/white"/>

            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioMapLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Map" />
        </RadioGroup>
</LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_bg"  >
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgLanguage">

            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioEnglishLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english" />

            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioArabicLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Arabic" />
        </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:textColor="@color/white"
        android:id="@+id/textViewTemp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/textViewWindSpeed"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:text="@string/WindSpeed"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTemp"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/cardViewWind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_bg"  >
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgTemp">

            <RadioButton
android:textColor="@color/white"
                android:id="@+id/radioCelsius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Celsius" />

            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioKelvin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Kelvin" />

            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioFahrenheit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fahrenheit" />
        </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWind"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewTemp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWindSpeed">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_bg"  >
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgWind">

            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioMeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MeterForSec" />

            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioMill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MillForHour" />
        </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:textColor="@color/white"
        android:id="@+id/textViewNotification"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/Notification"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTemp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNotification"
        android:layout_width="106dp"
        android:layout_height="154dp"

        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotification">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_bg"  >
        <RadioGroup
            android:id="@+id/rgNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioEnable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enable" />

            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioDisable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Disable" />
        </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>