<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        android:id="@+id/dayCardView"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:weightSum="4">

            <TextView
                android:id="@+id/txtdayName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/DayName"

                android:textSize="15dp" />
            <ImageView
                android:id="@+id/dayCloudImg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/gauge" />

            <TextView
                android:id="@+id/txtDayDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Status"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/txtDayTemp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/temperature"
                android:textSize="15dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>