<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@color/purple_500"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="50dp"
        app:cardCornerRadius="30dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governorate"
                android:id="@+id/txtGovernate"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/txtDate"
                android:layout_gravity="center_horizontal"
                android:textSize="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:id="@+id/txtTime"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sky"
                android:id="@+id/txtCloudStatus"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:id="@+id/txtCurrentTemp"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hourRecyclerView"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/daysRecyclerView"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="50dp"
        app:cardCornerRadius="30dp"
        android:paddingHorizontal="20dp"
        >
        <LinearLayout
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_marginVertical="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_marginVertical="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">
                    <ImageView
                        android:id="@+id/pressurrImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/gauge" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:id="@+id/txtPressure"
                        android:text="1080"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/pressure"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">
                    <ImageView
                        android:id="@+id/humidityImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/humidity" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:id="@+id/txtHumidity"
                        android:text="77%"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/humidity"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">
                    <ImageView
                        android:id="@+id/windImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/wind" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="2.06"
                        android:id="@+id/txtWind"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/wind"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">
                    <ImageView
                        android:id="@+id/cloudImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/cloud" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="0%"
                        android:id="@+id/txtCloud"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/cloud"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">
                    <ImageView
                        android:id="@+id/ultraImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ultra" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="0.0"
                        android:id="@+id/txtUltra"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/ultraviolet"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">
                    <ImageView
                        android:id="@+id/visImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/visibility" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="6000"
                        android:id="@+id/txtVisibility"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/visibility"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
</ScrollView>
</LinearLayout>