<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MakeAlertFragment"
    android:background="@color/purple_500">




        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="20dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="FROM"
                    android:textSize="25dp"/>
                <TextView
                    android:id="@+id/txtStartTimeAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/startTime"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/txtStartDateAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/startDate"
                    android:textSize="20dp" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="TO"
                    android:textSize="25dp"/>
                <TextView
                    android:id="@+id/txtEndTimeAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/endTime"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/txtEndDateAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/endDate"
                    android:textSize="20dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnSaveAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/save"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChooseLocation" />

        <Button
            android:id="@+id/btnChooseLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose Location"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>